# InformationSystem

./: .gitignore  CMakeLists.txt  README.md  main.cpp
HeadFile/: BasicWidget.h  Configure.h  Management.h  Member.h  PushButton.h  Table.h  Window.h
MainFile/: BasicWidget.cpp  Management.cpp  Member.cpp  PushButton.cpp  Table.cpp  Window.cpp
images/: member.txt  test.txt
